# rhorho

./: CMakeLists.txt
dipole_interpolation/: CMakeLists.txt  dipoleamplitude.cpp  dipoleamplitude.hpp  interpolation2d.cpp  interpolation2d.hpp  main.cpp
src/: CMakeLists.txt  diagram_integrator.cpp  diagram_integrator.hpp  diagram_sum.cpp  function_tests.cpp  functions.cpp  functions.hpp  main.cpp  odderon_ft.cpp  odderon_ft.hpp  proton.cpp  proton.hpp  proton_tests.cpp  test_main.cpp  vector.cpp  vector_tests.cpp
